feat: implement complete JWT authentication system
- Add JWT access token and refresh token authentication
- Implement user registration and login endpoints
- Create secure password encryption with BCrypt
- Add token rotation for enhanced security
- Implement user CRUD operations with proper validation
- Set up Spring Security configuration
- Add comprehensive error handling and logging
- Configure MySQL database integration with JPA