@@ -7,55 +7,35 @@ import com.xisufashion.xisufashion.exception.ResourceNotFoundException;
 import com.xisufashion.xisufashion.repository.UserRepository;
 import com.xisufashion.xisufashion.service.UserService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
-    private final PasswordEncoder passwordEncoder;
-
-    @Override
-    public UserResponse createUser(UserCreateRequest req) {
-        if(userRepository.existsByUsername(req.getUsername())) {
-            throw new RuntimeException("Username already exists!");
-        }
-
-        User user = new User();
-        user.setUsername(req.getUsername());
-        user.setPassword(passwordEncoder.encode(req.getPassword()));
-        user.setFirstName(req.getFirstName());
-        user.setLastName(req.getLastName());
-
-        User savedUser = userRepository.save(user);
-        return convertToResponse(savedUser);
-    }
 
     @Override
     public UserResponse getUserById(Long id) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "User not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + id));
         return convertToResponse(user);
     }
 
     @Override
     public List<UserResponse> getAllUsers() {
-        return userRepository.findAll().stream()
+        return userRepository.findAll()
+                .stream()
                 .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public UserResponse updateUser(Long id, UserCreateRequest req) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "User not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + id));
 
         user.setFirstName(req.getFirstName());
         user.setLastName(req.getLastName());
